2000-02-18  Geoff Keating  <geoffk@cygnus.com>

	* coffcode.h (coff_set_arch_mach_hook): Don't use variable-size
	arrays.
	(coff_compute_section_file_positions): Use bfd_free to pair
	bfd_malloc.
	(coff_write_object_contents): Likewise.

	* coff-rs6000.c (xcoff_howto_table_16): New variable.
	(xcoff_rtype2howto): Handle 16-bit variants of 32-bit relocs.

2000-02-18  Richard Henderson  <rth@cygnus.com>

	* elf-bfd.h (struct elf_link_hash_table): Remove copy_indirect
	and hide_symbol members.
	(elf_link_hash_copy_indirect): Remove.
	(elf_link_hash_hide_symbol): Remove.
	(struct elf_backend_data): Add elf_backend_copy_indirect_symbol
	and elf_backend_hide_symbol.
	(_bfd_elf_link_hash_copy_indirect): Declare.
	(_bfd_elf_link_hash_hide_symbol): Declare.
	* elf.c (_bfd_elf_link_hash_copy_indirect): Remove table argument.
	(_bfd_elf_link_hash_hide_symbol): Likewise.
	(_bfd_elf_link_hash_table_init): Don't init killed members.
	* elflink.h (elf_link_add_object_symbols): Use the bed function
	pointers not elf_link_hash_{copy_indirect,hide_symbol}.
	(elf_link_assign_sym_version): Likewise.
	* elfxx-target.h (elf_backend_copy_indirect_symbol): Default.
	(elf_backend_hide_symbol): Likewise.
	(elfNN_bed): Update for new members.

2000-02-17  Kevin Buettner  <kevinb@redhat.com>

	* rs6000-core.c (CORE_DATA_SIZE_FIELD, CORE_COMM_FIELD, SAVE_FIELD,
	STACK_END_ADDR): Define for new core file format.
	(LOADER_OFFSET_FIELD, LOADER_REGION_SIZE, CORE_DUMP): New defines
	for handling the vagaries of the various core file structures used
	by AIX over the years.
	(rs6000coff_core_p, rs6000coff_core_file_matches_executable,
	Rs6kCorData): Use above defines to adapt code to use AIX 4.3's
	core_dumpx structure.

Thu Feb 17 00:04:48 2000  J"orn Rennecke <amylaar@cygnus.co.uk>

	* archures.c (bfd_mach_sh2, bfd_mach_sh_dsp): New macros.
	(bfd_mach_sh3_dsp): Likewise.
	(bfd_mach_sh4): Reinstate.
	(bfd_default_scan): Recognize 7410, 7708, 7729 and 7750.
	* bfd-in2.h: Regenerate.